Fix padding on full bleed image tiles at mobile widths.

--- a/app/assets/stylesheets/base/_foundation.scss
+++ b/app/assets/stylesheets/base/_foundation.scss
@@ -183,7 +183,7 @@ section {
     }
 
     .col-no-img {
-      padding: 60px 15px 0;
+      padding: 60px 30px 0;
 
       @media screen and (min-width: $screen-xs-min) {
         padding: 60px 15px;
